--- a/crc/src/CMakeLists.txt
+++ b/crc/src/CMakeLists.txt
@@ -7,11 +7,9 @@ add_executable(${PROJECT_NAME}
     crc/main.c
 
     # Other
-    portme/checksum.c
-    portme/common.c
-    portme/mainmain.c
+    portme/fread.c
+    portme/printf.c
     portme/printfmap.c
-    portme/supportFuncs.c
     ${STARTUP_CODE}
     )
 
